Adds code for Navigation article

--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -3,7 +3,7 @@
   xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:app="http://schemas.android.com/apk/res-auto">
   <item
-    android:id="@+id/action_settings"
+    android:id="@+id/to_preferences"
     android:icon="@drawable/ic_settings"
     app:showAsAction="ifRoom"
     android:showAsAction="ifRoom"
