--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,14 +6,18 @@
   android:layout_height="match_parent"
   tools:context=".ui.MainActivity">
 
-  <FrameLayout
-    android:id="@+id/activity_main"
+  <fragment
+    android:id="@+id/nav_controller"
+    android:name="androidx.navigation.fragment.NavHostFragment"
     android:layout_width="0dp"
     android:layout_height="0dp"
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toBottomOf="@+id/appbar" />
+    app:layout_constraintTop_toBottomOf="@+id/appbar"
+    app:defaultNavHost="true"
+    app:navGraph="@navigation/weather_navigation" />
+
 
   <com.google.android.material.appbar.AppBarLayout
     android:id="@+id/appbar"
@@ -27,7 +31,7 @@
       android:background="?attr/colorPrimary"
       android:elevation="4dp"
       android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-      app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
+      app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
 
   </com.google.android.material.appbar.AppBarLayout>
 
